# RoadRunner

./: .gitattributes  .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.github/workflows/: python.yml
config/: roadrunner.example.yaml
docs/: architecture.md  bluetooth-marvell.md  context.md  hardware-compatibility.md  hardware.md  hudiy.md  obdii.md  project-log.md  roadmap.md  surface-pro-4-debian.md  surface-quickstart.md  vehicleagent-prototype.md
scripts/: bt-status.sh  collect-logs.sh  elm327-test.sh  surface-status.sh
src/roadrunnerd/: __init__.py  __main__.py  config.py  service.py
src/vehicleagent/: __init__.py  __main__.py  adapter.py  elm327.py  ha_mqtt.py  models.py  mqtt.py  simulator.py  store.py
systemd/: vehicleagent.service
tests/: test_config.py  test_simulator.py  test_store.py  test_vehicleagent_main.py
tools/: run_simulator.py
